XMLtoCSV/objects/unpackaged/objects/PCYC_Data_Change_Request__c.object
<CustomObject>
    <description>Object for end users to submit data changes to data admin</description>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_Account_Status__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Activate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactivate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Data Change Requests</relationshipLabel>
        <relationshipName>Data_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCYC_Additional_Information__c</fullName>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Business_Account_Name__c</fullName>
        <label>Business Account Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Change_Reason__c</fullName>
        <label>Change Reason</label>
        <picklist>
            <picklistValues>
                <fullName>New Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request to Make Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set to Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Change_Request_Status__c</fullName>
        <label>Change Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sent for Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request More Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Credentials__c</fullName>
        <label>Credentials</label>
        <picklist>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PharmD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCYC_Existing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Existing Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipLabel>Data Change Requests</relationshipLabel>
        <relationshipName>Data_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCYC_First_Name__c</fullName>
        <label>First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCYC_Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Data Change Requests (Parent Account)</relationshipLabel>
        <relationshipName>Data_Change_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCYC_Reason_for_Rejection__c</fullName>
        <label>Reason for Rejection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PCYC_State__c</fullName>
        <description>State of the Address</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Status_Change_Reason__c</fullName>
        <label>Status Change Reason</label>
        <picklist>
            <controllingField>PCYC_Account_Status__c</controllingField>
            <picklistValues>
                <fullName>New Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merged Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer Practicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUL (Researched Unable to Locate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved without Forwarding Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Target</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PCYC_Submit_for_Processing__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Submit for Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Data Change Request</label>
    <listViews>
        <fullName>All_Data_Change_Requests</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Account__c</columns>
        <columns>PCYC_Date_Closed__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Data Change Requests</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All_Open_Data_Change_Requests</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Account__c</columns>
        <columns>PCYC_Change_Request_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PCYC_Date_Closed__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Open Data Change Requests</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>My_Closed_Data_Change_Requests</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Account__c</columns>
        <columns>PCYC_Change_Request_Status__c</columns>
        <columns>PCYC_Date_Closed__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>PCYC_Date_Closed__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Closed Data Change Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Data_Change_Requests</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Account__c</columns>
        <columns>PCYC_Change_Request_Status__c</columns>
        <columns>PCYC_Date_Closed__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>PCYC_Date_Closed__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Open Data Change Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Rejected_Data_Change_Requests</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Account__c</columns>
        <columns>PCYC_Change_Request_Status__c</columns>
        <columns>PCYC_Date_Closed__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>PCYC_Change_Request_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>My Rejected Data Change Requests</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DCR-{00000}</displayFormat>
        <label>Data Change Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Change Requests</pluralLabel>
    <recordTypes>
        <fullName>DCR</fullName>
        <active>true</active>
        <label>DCR</label>
    </recordTypes>
    <recordTypes>
        <fullName>DCR_Locked</fullName>
        <active>true</active>
        <label>DCR-Locked</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Zip_Code_Not_Valid</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(PCYC_Zip_Code__c)),NOT(REGEX(PCYC_Zip_Code__c, &quot;\\d{5}(-\\d{4})?&quot;)))</errorConditionFormula>
        <errorMessage>Error: Zip code not valid. Must be numeric and 5 digits.</errorMessage>
    </validationRules>
</CustomObject>